Added new routes

--- a/frontend/staticwebapp.config.json
+++ b/frontend/staticwebapp.config.json
@@ -7,6 +7,14 @@
         {
             "route": "/authenticated/*",
             "allowedRoles": [ "authenticated" ]
+        },
+        {
+            "route": "/producta/*",
+            "allowedRoles": [ "product-a-owner" ]
+        },
+        {
+            "route": "/documentation/*",
+            "allowedRoles": ["general-reader"]
         }
     ],
     "auth": {
